--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,9 @@ FIND_PACKAGE(LibXml2 REQUIRED)
 FIND_PACKAGE(Protobuf REQUIRED)
 FIND_PACKAGE(KERBEROS REQUIRED)
 FIND_PACKAGE(GSasl REQUIRED)
-FIND_PACKAGE(GoogleTest REQUIRED)
+IF(BUILD_TEST)
+	FIND_PACKAGE(GoogleTest REQUIRED)
+ENDIF(BUILD_TEST)
 INCLUDE_DIRECTORIES(${GoogleTest_INCLUDE_DIR})
 LINK_LIBRARIES(${GoogleTest_LIBRARIES})
 
@@ -30,10 +32,12 @@ IF(OS_LINUX)
     FIND_PACKAGE(LibUUID REQUIRED)
 ENDIF(OS_LINUX)
 
-ADD_SUBDIRECTORY(mock)
-ADD_SUBDIRECTORY(src)
-ADD_SUBDIRECTORY(test)
 
+ADD_SUBDIRECTORY(src)
+IF(BUILD_TEST)
+	ADD_SUBDIRECTORY(mock)
+	ADD_SUBDIRECTORY(test)
+ENDIF(BUILD_TEST)
 CONFIGURE_FILE(src/libhdfs3.pc.in ${CMAKE_SOURCE_DIR}/src/libhdfs3.pc @ONLY)
 CONFIGURE_FILE(debian/changelog.in ${CMAKE_SOURCE_DIR}/debian/changelog @ONLY)
 
