--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,6 @@
 Source: libhdfs3
 Priority: optional
-Build-Depends: debhelper (>= 9), cmake, libprotobuf-dev, protobuf-compiler, libxml2-dev, libkrb5-dev, uuid-dev, libgsasl7-dev
+Build-Depends: debhelper (>= 9), cmake, libprotobuf-dev, protobuf-compiler, libxml2-dev, libkrb5-dev, libgsasl7-dev
 Standards-Version: 3.9.5
 Section: libs
 
