--- a/.asf.yaml
+++ b/.asf.yaml
@@ -42,5 +42,18 @@ github:
     squash:  true
     merge:   false
     rebase:  false
+  protected_branches:
+    main:
+      required_pull_request_reviews:
+        dismiss_stale_reviews: true
+        required_approving_review_count: 1
+    bdbje:
+      required_pull_request_reviews:
+        dismiss_stale_reviews: true
+        required_approving_review_count: 1
+    libhdfs3:
+      required_pull_request_reviews:
+        dismiss_stale_reviews: true
+        required_approving_review_count: 1
 notifications:
   pullrequests_status:  commits@doris.apache.org
